--- a/index.html
+++ b/index.html
@@ -3,9 +3,176 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>G3 Architects</title>
+    <!-- font link  -->
+     <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+<!-- css link  -->
+ <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    
+    <header class="bg-light">
+        <nav class="navbar display-flex">
+            <h3 class="brand open-sans-font">G3 Architects</h3>
+            <ul class="nav-links display-flex open-sans-font">
+                <li class="nav-item"><a href="" class="nav-link">Home</a></li>
+                <li class="nav-item"><a href="" class="nav-link">About</a></li>
+                <li class="nav-item"><a href="" class="nav-link">Contact Us </a></li>
+                <li class="nav-item"><a href="" class="nav-link">Login</a></li>
+
+            </ul>
+
+        </nav>
+        <div class="banner">
+            <div class="banner-content">
+                <h1 class="banner-title open-sans-font ">
+                Brand New Group of Architects</h1>
+                <p class="banner-description open-sans-font ">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <button class="btn-primary">Explore More</button>
+            </div>
+            <img class="banner-image" src="./images/banner.png" alt="img">
+        </div>
+
+    </header>
+
+    <main>
+        <!-- team section  -->
+        <section class="teams display-flex">
+            <div class="team-img-container">
+                <img src="./images/team1.png" alt="img">
+                <img src="./images/team2.png" alt="img">
+                <img src="./images/team3.png" alt="img">
+                <img src="./images/team4.png" alt="img">
+            </div>
+            <div class="our-features open-sans-font">
+                <h3 class="section-title"><span class="quick">Quick list</span> of Our <span class="features">Features</span></h3>
+                <p class="feature-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <button class="btn-primary feature-bt">Explore More</button>
+            </div>
+
+        </section>
+     <!-- team section end  -->
+        <!-- feature area start  -->
+         <section class="feature display-flex">
+            <div>
+                <h3 id="feature-section-title" class="section-title">
+                    Features you will <br> love & enjoy
+                </h3>
+                <p class="text-ligth-gray ">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+
+                <!-- feature card container  -->
+                 <div class="feature-card">
+                    <h4 class="feature-title">Dexktop & Mobile Version</h4>
+                    <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+
+                 </div>
+
+                  <div class="feature-card">
+                    <h4 class="feature-title">Drag & Drop Builder</h4>
+                    <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+
+                 </div>
+
+                  <div class="feature-card">
+                    <h4 class="feature-title">Awesome Modern Design</h4>
+                    <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+
+                 </div>
+
+                  <div class="feature-card">
+                    <h4 class="feature-title">Super Easy to Edit</h4>
+                    <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+
+                 </div>
+            </div>
+            <div class="featur-img">
+                <img src="./images/architect.png" alt="">
+
+                <button class="btn-primary feature-btn">
+                    <span>10+Years</span>
+                    <br>
+                    <span>experience</span>
+                </button>
+            </div>
+
+         </section>
+
+         <!-- some facts  -->
+          <section class="some-facts">
+            <h3 class="section-title open-sans-font">Some Facts</h3>
+            <p class="text-ligth-gray open-sans-font fact-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+
+            <div class="facts-container">
+
+                <div class="fact display-flex">
+                   <div>
+                     <img src="./images/icons/ribon.png" alt="" class="fact-icon">
+                    <h4 class="fact-number open-sans-font">
+                        54
+                    </h4>
+                    <h5 class="fact-name open-sans-font">Awards Winnings</h5>
+                   </div>
+                </div>
+
+                <div class="fact display-flex">
+                    <div>
+                        <img src="./images/icons/projects.png" alt="" class="fact-icon">
+                    <h4 class="fact-number">
+                        1458
+                    </h4>
+                    <h5 class="fact-name">Project Finished</h5>
+                    </div>
+                </div>
+
+                <div class="fact display-flex">
+                    <div>
+                        <img src="./images/icons/customers.png" alt="" class="fact-icon">
+                    <h4 class="fact-number">
+                        590
+                    </h4>
+                    <h5 class="fact-name">Clients Worked</h5>
+                    </div>
+                </div>
+
+                <div class="fact display-flex">
+                    <div>
+                        <img src="./images/icons/email.png" alt="" class="fact-icon">
+                    <h4 class="fact-number">
+                        2257
+                    </h4>
+                    <h5 class="fact-name">Email Send</h5>
+                    </div>
+                </div>
+
+            </div>
+          </section>
+
+            <!-- some features  -->
+          <section class="our-sponsors">
+
+            <div class="sponsor-info">
+                <h3 class="section-title">Our Sponspors</h3>
+                <p class="text-light-gray pargrape-section">
+                    There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.
+                </p>
+            </div>
+
+            <div class="sponsor-companies">
+                <img src="./images/sponsors/spotify.png">
+                <img src="./images/sponsors/amazon.png">
+                <img src="./images/sponsors/google.png">
+                <img src="./images/sponsors/telerama.png">
+                <img src="./images/sponsors/figma.png" alt="">
+            </div>
+          </section>
+    </main>
+
+
+    <footer>
+        <div class="footer-area">
+            <a  href="#" class="footer-contact open-sans-font">All rights reserved copyright@2023 startup landing page design</a>
+        </div>
+    </footer>
 </body>
 </html>
